fix: change menu line-spacing

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header nav > a:last-child {
 }
 
 header nav {
-    margin-bottom: 0.5%;
+    margin-bottom: 0.4%;
 }
 
 header a {
